# netscope-elite

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  mitm.rs  network.rs  scanner.rs  sniffer.rs  store.rs  vendor.rs
src/components/: AlertSystem.tsx  DeviceCard.tsx  DeviceLabelEditor.tsx  ExportPanel.tsx  IntelligencePanel.tsx  NetworkInfo.tsx  NetworkTopology.tsx  ScanButton.tsx  SearchBar.tsx  SecretsVault.tsx  TitleBar.tsx  TrafficLog.tsx
