[package]
name = "netscope"
version = "2.0.0"
edition = "2021"

[lib]
name = "netscope_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

# Network scanning
pnet = { version = "0.35", features = ["std"] }
pnet_datalink = "0.35"
ipnet = "2"
dns-lookup = "2"

# MAC vendor
mac_oui = "0.2"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Utilities
log = "0.4"
env_logger = "0.11"
thiserror = "1"
anyhow = "1"
reqwest = { version = "0.12", features = ["rustls-tls"] }
dirs = "5"
pcap-file = "2.0.0"
tauri-plugin-dialog = "2.7.0"
dns-parser = "0.8.0"
simple-dns = "0.11.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
] }

[profile.release]
opt-level = "s"
strip = true
